--- a/level/representation.html
+++ b/level/representation.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>行程编码 - Sokoban Tutorial</title>
+        <title>表示 - Sokoban Tutorial</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/run_length.html" class="active"><strong aria-hidden="true">1.1.</strong> 行程编码</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> 求解器</div></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">4.</strong> 术语表</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html" class="active"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/run_length_encoding.html"><strong aria-hidden="true">1.2.</strong> 行程编码</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.3.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.4.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> 求解器</div></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">4.</strong> 术语表</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -176,97 +176,72 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="行程编码run-length-encoding"><a class="header" href="#行程编码run-length-encoding">行程编码(Run-length encoding)</a></h1>
-<p><a href="https://en.wikipedia.org/wiki/Run-length_encoding">行程编码</a>(run-length encoding, RLE)经常被用于压缩推箱子的关卡和解决方案.</p>
-<pre><code class="language-txt">###
-#.###
-#*$ #
-# @ #
-#####
-</code></pre>
-<p>经 RLE 编码后可得:</p>
-<pre><code class="language-txt">3#
-#.3#
-#*$-#
-#--@#
-5#
-</code></pre>
-<p>可以看出, 虽然编码后的关卡有更小的体积, 但不再能直观地看出关卡的结构.</p>
-<p>RLE 编码后的关卡通常还会使用 <code>|</code> 来分割行, 而非 <code>\n</code>. 使其看上去更加紧凑:</p>
-<pre><code class="language-txt">3#|#.3#|#*$-#|#--@#|5#
-</code></pre>
-<p>只需要对原本的语句进行修改即可提供对 <code>|</code> 分割行的支持:</p>
-<pre><code class="language-rs">for line in str.lines() { ... SKIP ... }
+                        <h1 id="表示"><a class="header" href="#表示">表示</a></h1>
+<h2 id="表示地图"><a class="header" href="#表示地图">表示地图</a></h2>
+<p>地图共包含 5 种元素, 这些元素可能在一个格子内叠加(比如玩家位于目标上).<br />
+最小的数据存储单元字节包含 8 个比特, 足以表示 5 种元素. 因此可以使用一个字节的空间来存储单个地图格子, 其中的每个比特表示一种地图元素.<br />
+创建用于表示地图元素的比特位:</p>
+<pre><code class="language-rs">use bitflags::bitflags;
 
-for line in str.split(['\n', '|']) { ... SKIP ... }
-</code></pre>
-<h2 id="编码"><a class="header" href="#编码">编码</a></h2>
-<p>下面是一个简单的 RLE 编码函数的实现:</p>
-<pre><code class="language-rs">pub fn rle_encode(str: &amp;str) -&gt; Result&lt;String, EncodeRleError&gt; {
-    let mut result = String::new();
-    let mut chars = str.chars().peekable();
-    let mut count = 0;
-    while let Some(char) = chars.next() {
-        if char.is_numeric() {
-            return Err(EncodeRleError::InvalidCharacter(char));
-        }
-        count += 1;
-        if chars.peek() != Some(&amp;char) {
-            if count &gt; 1 {
-                result.push_str(&amp;count.to_string());
-            }
-            result.push(char);
-            count = 0;
-        }
+bitflags! {
+    pub struct Tiles: u8 {
+        const Floor = 1 &lt;&lt; 0;
+        const Wall = 1 &lt;&lt; 1;
+        const Box = 1 &lt;&lt; 2;
+        const Goal = 1 &lt;&lt; 3;
+        const Player = 1 &lt;&lt; 4;
     }
-    Ok(result)
 }
 </code></pre>
-<p>该方法不会使用括号包裹重复的相连字串以提高压缩率.</p>
-<h2 id="解码"><a class="header" href="#解码">解码</a></h2>
-<p>下面是一个 RLE 解码函数的实现:</p>
-<pre><code class="language-rs">pub fn rle_decode(str: &amp;str) -&gt; Result&lt;String, DecodeRleError&gt; {
-    let mut result = String::new();
+<p>使用一维数组来存储地图数据, 使用二维向量(数学)存储地图尺寸.</p>
+<pre><code class="language-rs">use nalgebra::Vector2;
 
-    let mut length_string = String::new();
-    let mut iter = str.chars();
-    while let Some(char) = iter.next() {
-        if char.is_ascii_digit() {
-            length_string.push(char);
-            continue;
-        }
-        let mut token = String::new();
-        if char == '(' {
-            let mut nesting_level = 0;
-            for char in &amp;mut iter {
-                if char == '(' {
-                    nesting_level += 1;
-                } else if char == ')' {
-                    if nesting_level == 0 {
-                        break;
-                    }
-                    nesting_level -= 1;
-                }
-                token.push(char);
-            }
-        } else {
-            token = char.to_string();
-        }
-        let length = length_string.parse().unwrap_or(1);
-        result += &amp;token.repeat(length);
-        length_string.clear();
-    }
-    if !length_string.is_empty() {
-        return Err(DecodeRleError::EndWithDigits(
-            length_string.parse().unwrap(),
-        ));
-    }
-    if result.contains('(') {
-        return rle_decode(&amp;result);
-    }
-    Ok(result)
+pub struct Map {
+    data: Vec&lt;Tiles&gt;,
+    dimensions: Vector2&lt;i32&gt;,
+    // ... SKIP ...
 }
 </code></pre>
+<p>使用一维数组而非二维数组是因为一维数组更平坦(flatten), 进行部分操作时更简单高效. 如:</p>
+<pre><code class="language-rs">impl Map {
+    pub fn with_dimensions(dimensions: Vector2&lt;i32&gt;) -&gt; Self {
+        Self {
+            data: vec![Tiles::empty(); (dimensions.x * dimensions.y) as usize],
+            dimensions,
+            // ... SKIP ...
+        }
+    }
+    // ... SKIP ...
+}
+</code></pre>
+<p>因为只需要操作一个数组(而非 n 个数组), 进行调整地图尺寸等操作的代码会更简单高效.
+而且能确保动态数组的元素是紧密排列的, 根据数据局部性原理, 读取数据的性能通常会更好.</p>
+<p>重载下标运算符, 以便后续直接通过二维坐标访问地图元素.</p>
+<pre><code class="language-rs">impl Index&lt;Vector2&lt;i32&gt;&gt; for Map {
+    type Output = Tiles;
+    fn index(&amp;self, position: Vector2&lt;i32&gt;) -&gt; &amp;Tiles {
+        &amp;self.data[(position.y * self.dimensions.x + position.x) as usize]
+    }
+}
+
+impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
+    fn index_mut(&amp;mut self, position: Vector2&lt;i32&gt;) -&gt; &amp;mut Tiles {
+        &amp;mut self.data[(position.y * self.dimensions.x + position.x) as usize]
+    }
+}
+</code></pre>
+<h2 id="表示关卡"><a class="header" href="#表示关卡">表示关卡</a></h2>
+<p>关卡数据可分为三个部分: 地图数据, 元数据和注释. 其中注释可以作为元数据.<br />
+元数据是一个键值对的集合, 因此可以使用 HashMap 来存储.
+可以使用下面的结构体存储关卡数据:</p>
+<pre><code class="language-rs">pub struct Level {
+    map: Map,
+    metadata: HashMap&lt;String, String&gt;,
+    // ... SKIP ...
+}
+</code></pre>
+<p>将地图从关卡中拆分是因为地图涉及大量的关联函数, 如果都放在 <code>Level</code> 里会导致其变得过于庞大.<br />
+为了提升代码的可读性和可维护性, 将相关代码拆分到 <code>Map</code> 中, 并将 <code>Level</code> 的 Deref 操作指向 <code>Map</code>. 并通过实现 <a href="https://doc.rust-lang.org/std/ops/trait.Deref.html">Deref trait</a>, 使得用户能够透明地引用到 <code>Level</code> 内部的 Map.</p>
 
                     </main>
 
@@ -276,7 +251,7 @@ for line in str.split(['\n', '|']) { ... SKIP ... }
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../level/construction.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../level/run_length_encoding.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -290,7 +265,7 @@ for line in str.split(['\n', '|']) { ... SKIP ... }
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../level/construction.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../level/run_length_encoding.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
