--- a/level/run_length_encoding.html
+++ b/level/run_length_encoding.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>术语表 - Sokoban Tutorial</title>
+        <title>行程编码 - Sokoban Tutorial</title>
 
 
         <!-- Custom HTML head -->
@@ -12,21 +12,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../highlight.css">
+        <link rel="stylesheet" href="../tomorrow-night.css">
+        <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -35,7 +35,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="level/run_length_encoding.html"><strong aria-hidden="true">1.2.</strong> 行程编码</a></li><li class="chapter-item expanded "><a href="level/construction.html"><strong aria-hidden="true">1.3.</strong> 构造</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.4.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> 求解器</div></li><li class="chapter-item expanded "><a href="glossary.html" class="active"><strong aria-hidden="true">4.</strong> 术语表</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/run_length_encoding.html" class="active"><strong aria-hidden="true">1.2.</strong> 行程编码</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.3.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.4.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> 求解器</div></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">4.</strong> 术语表</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -144,7 +144,7 @@
                     <h1 class="menu-title">Sokoban Tutorial</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
                         <a href="https://github.com/ShenMian/sokoban-tutorial" title="Git repository" aria-label="Git repository">
@@ -176,20 +176,109 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="术语表"><a class="header" href="#术语表">术语表</a></h1>
-<div class="table-wrapper"><table><thead><tr><th>中文</th><th>英文</th></tr></thead><tbody>
-<tr><td>求解器</td><td>solver</td></tr>
-<tr><td>解/解决方案</td><td>solution</td></tr>
-</tbody></table>
-</div>
+                        <h1 id="行程编码run-length-encoding"><a class="header" href="#行程编码run-length-encoding">行程编码(Run-length encoding)</a></h1>
+<p><a href="https://en.wikipedia.org/wiki/Run-length_encoding">行程编码</a>(run-length encoding, RLE)经常被用于压缩推箱子的关卡和解决方案.</p>
+<pre><code class="language-txt">###
+#.###
+#*$ #
+# @ #
+#####
+</code></pre>
+<p>经 RLE 编码后可得:</p>
+<pre><code class="language-txt">3#
+#.3#
+#*$-#
+#--@#
+5#
+</code></pre>
+<p>可以看出, 虽然编码后的关卡有更小的体积, 但不再能直观地看出关卡的结构.</p>
+<p>RLE 编码后的关卡通常还会使用 <code>|</code> 来分割行, 而非 <code>\n</code>. 使其看上去更加紧凑:</p>
+<pre><code class="language-txt">3#|#.3#|#*$-#|#--@#|5#
+</code></pre>
+<p>只需要对原本的语句进行修改即可提供对 <code>|</code> 分割行的支持:</p>
+<pre><code class="language-rs">for line in str.lines() { ... SKIP ... }
+
+for line in str.split(['\n', '|']) { ... SKIP ... }
+</code></pre>
+<h2 id="编码"><a class="header" href="#编码">编码</a></h2>
+<p>下面是一个简单的 RLE 编码函数的实现:</p>
+<pre><code class="language-rs">pub fn rle_encode(str: &amp;str) -&gt; Result&lt;String, EncodeRleError&gt; {
+    let mut result = String::new();
+    let mut chars = str.chars().peekable();
+    let mut count = 0;
+    while let Some(char) = chars.next() {
+        if char.is_numeric() {
+            return Err(EncodeRleError::InvalidCharacter(char));
+        }
+        count += 1;
+        if chars.peek() != Some(&amp;char) {
+            if count &gt; 1 {
+                result.push_str(&amp;count.to_string());
+            }
+            result.push(char);
+            count = 0;
+        }
+    }
+    Ok(result)
+}
+</code></pre>
+<p>该方法不会使用括号包裹重复的相连字串以提高压缩率.</p>
+<h2 id="解码"><a class="header" href="#解码">解码</a></h2>
+<p>下面是一个 RLE 解码函数的实现:</p>
+<pre><code class="language-rs">pub fn rle_decode(str: &amp;str) -&gt; Result&lt;String, DecodeRleError&gt; {
+    let mut result = String::new();
+
+    let mut length_string = String::new();
+    let mut iter = str.chars();
+    while let Some(char) = iter.next() {
+        if char.is_ascii_digit() {
+            length_string.push(char);
+            continue;
+        }
+        let mut token = String::new();
+        if char == '(' {
+            let mut nesting_level = 0;
+            for char in &amp;mut iter {
+                if char == '(' {
+                    nesting_level += 1;
+                } else if char == ')' {
+                    if nesting_level == 0 {
+                        break;
+                    }
+                    nesting_level -= 1;
+                }
+                token.push(char);
+            }
+        } else {
+            token = char.to_string();
+        }
+        let length = length_string.parse().unwrap_or(1);
+        result += &amp;token.repeat(length);
+        length_string.clear();
+    }
+    if !length_string.is_empty() {
+        return Err(DecodeRleError::EndWithDigits(
+            length_string.parse().unwrap(),
+        ));
+    }
+    if result.contains('(') {
+        return rle_decode(&amp;result);
+    }
+    Ok(result)
+}
+</code></pre>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="level/normalization.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../level/representation.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
+                            <a rel="next prefetch" href="../level/construction.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -197,10 +286,13 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="level/normalization.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../level/representation.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
+                    <a rel="next prefetch" href="../level/construction.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
@@ -213,13 +305,13 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
 
