deploy: e786ab489d629616364046537a50d983947a4dcc

--- a/print.html
+++ b/print.html
@@ -877,7 +877,7 @@ for line in str.split(['\n', '|']) { ... SKIP ... }
 ###
 </code></pre>
 <p>这是一个最简单的非标准关卡, 因为其没有箱子和目标, 解为空.</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="求解器"><a class="header" href="#求解器">求解器</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="求解器solver"><a class="header" href="#求解器solver">求解器(Solver)</a></h1>
 <p>顾名思义, 求解器是用于自动求解推箱子关卡的程序.</p>
 <p>寻路算法是在<strong>路径点</strong>组成的图中寻找一条从<strong>初始位置</strong>到<strong>最终位置</strong>的路径.
 求解器则是在<strong>状态</strong>组成的图中寻找一条从<strong>初始状态</strong>到<strong>最终状态</strong>的路径.</p>
@@ -900,7 +900,7 @@ for line in str.split(['\n', '|']) { ... SKIP ... }
 </code></pre>
 <p>通过启发式算法优先探索最接近最终状态的节点.</p>
 <p>TODO</p>
-<h2 id="优化器"><a class="header" href="#优化器">优化器</a></h2>
+<h2 id="优化器optimizer"><a class="header" href="#优化器optimizer">优化器(Optimizer)</a></h2>
 <p>对已知的路径进行<a href="https://en.wikipedia.org/wiki/Local_search_(optimization)">局部搜索</a>, 以寻找更佳的路径.</p>
 <p>TODO</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="资源"><a class="header" href="#资源">资源</a></h1>
