--- a/print.html
+++ b/print.html
@@ -883,9 +883,18 @@ for line in str.split(['\n', '|']) { ... SKIP ... }
 求解器则是在<strong>状态</strong>组成的图中寻找一条从<strong>初始状态</strong>到<strong>最终状态</strong>的路径, 即移动箱子的顺序.</p>
 <h2 id="搜索算法"><a class="header" href="#搜索算法">搜索算法</a></h2>
 <ul>
-<li><a href="https://en.wikipedia.org/wiki/A*_search_algorithm">A* 搜索算法</a>.</li>
-<li><a href="https://en.wikipedia.org/wiki/Iterative_deepening_A*">IDA* 搜索算法</a>.</li>
-<li><a href="https://ieeexplore.ieee.org/document/9231929">FESS 搜索算法</a>: 该算法被知名推箱子求解器 <a href="https://festival-solver.site/">Festival</a> 所使用.</li>
+<li>
+<p><a href="https://en.wikipedia.org/wiki/A*_search_algorithm">A* 搜索算法</a>.</p>
+</li>
+<li>
+<p><a href="https://en.wikipedia.org/wiki/Iterative_deepening_A*">IDA* 搜索算法</a>.</p>
+</li>
+<li>
+<p><a href="https://ieeexplore.ieee.org/document/9231929">FESS 搜索算法</a>: 该算法被知名推箱子求解器 <a href="https://festival-solver.site/">Festival</a> 所使用.</p>
+<p>A* 和 IDA* 只通过单个启发式函数值值来选择下一个探索的节点.<br />
+可以通过计算出多个启发式函数值, 将它们融合为单个启发式函数值, 以同时利用多种启发式函数.
+这种方法简单有效, 但由于多个启发式函数值被融合为了一个, 因此无法区分单个启发式函数值的变化趋势.</p>
+</li>
 </ul>
 <p>本文将描述如何创建一个基于 <a href="https://en.wikipedia.org/wiki/A*_search_algorithm">A* 搜索算法</a>的求解器.</p>
 <h2 id="表示状态"><a class="header" href="#表示状态">表示状态</a></h2>
@@ -908,6 +917,9 @@ for line in str.split(['\n', '|']) { ... SKIP ... }
 </code></pre>
 <p>通过启发式算法优先探索最接近最终状态的节点.</p>
 <p>TODO</p>
+<hr />
+<h2 id="启发式函数heuristic-function"><a class="header" href="#启发式函数heuristic-function">启发式函数(Heuristic function)</a></h2>
+<p>启发式函数用于指导搜索算法的搜索方向.</p>
 <hr />
 <h2 id="优化器optimizer"><a class="header" href="#优化器optimizer">优化器(Optimizer)</a></h2>
 <p>对已知的路径进行<a href="https://en.wikipedia.org/wiki/Local_search_(optimization)">局部搜索</a>, 以寻找更佳的路径.</p>
