deploy: e1f4db6f6a2b3028824565fd1624a4fe1d9265e9

--- a/index.html
+++ b/index.html
@@ -177,16 +177,25 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="介绍"><a class="header" href="#介绍">介绍</a></h1>
-<p>本文将描述如何实现一个推箱子游戏 📦, 代码示例使用 Rust 语言 🦀 编写.<br />
-推箱子游戏具有以下特点:</p>
+<p>本文将描述如何实现一个推箱子游戏 📦, 代码示例使用 Rust 语言 🦀 编写.</p>
+<h2 id="为什么通过案例来讲解"><a class="header" href="#为什么通过案例来讲解">为什么通过案例来讲解</a></h2>
+<p>本文以 "推箱子" 游戏为案例, 深入浅出的描述软件开发过程. 通过案例讲解有以下目的:</p>
+<ul>
+<li>结合实例的学习可以将<strong>知识</strong>和<strong>应用</strong>结合在一起, 使读者无需被 "学这个有什么用?" 所困扰.</li>
+<li>提供丰富的实例. 推箱子问题本身还附带了许多子问题, 很适合作为例子使用.</li>
+</ul>
+<h2 id="为什么选择推箱子作为案例"><a class="header" href="#为什么选择推箱子作为案例">为什么选择推箱子作为案例</a></h2>
+<p>之所以选择推箱子游戏, 是因为它具有以下特点:</p>
 <ul>
 <li>规则简单. 可以专注于实现功能, 而非理解复杂的游戏规则和机制.</li>
-<li>基本功能易于实现.</li>
+<li>基本功能易于实现, 如推箱子和通关判断.</li>
 <li>有具有挑战的高级功能. 比如纯鼠标控制, 逆推等.</li>
 <li>有需要深入钻研的求解器, 用于自动求解推箱子关卡.</li>
 </ul>
-<p>本文将由浅入深的介绍上面功能并提供实现的思路.</p>
-<p>本文不会探讨的内容有:</p>
+<p>推箱子的实现既可以简单也可以复杂，读者可以根据自身的情况选择学习的深度。</p>
+<h2 id="范围"><a class="header" href="#范围">范围</a></h2>
+<p>本文将描述基本功能的具体实现方法, 高级功能的实现方法以及求解器的实现思路.</p>
+<p>本文<strong>不会</strong>探讨的内容有:</p>
 <ul>
 <li>推箱子的其他变种. 感兴趣的读者可以自行了解, 可以作为一种拓展.</li>
 <li>Rust 语言本身. 本文中出现的算法适用于其他编程语言. 因为示例代码使用了 Rust 语言, 可能会探讨 Rust 实现该算法的细节, 但不会专门介绍 Rust 语言的特性.</li>
