--- a/level/construction.html
+++ b/level/construction.html
@@ -391,16 +391,16 @@
     }
 
     fn to_groups(str: &amp;str) -&gt; impl Iterator&lt;Item = &amp;str&gt; + '_ {
-        str.split_inclusive(['\n', '|']).filter_map({
+        str.split(['\n', '|']).filter_map({
             let mut offset = 0;
             let mut len = 0;
             let mut in_block_comment = false;
             let mut has_map_data = false;
             move |line| {
-                len += line.len();
+                len += line.len() + 1;
 
                 let trimmed_line = line.trim();
-                if !in_block_comment &amp;&amp; (trimmed_line.is_empty() || !line.ends_with(['\n', '|'])) {
+                if !in_block_comment &amp;&amp; (trimmed_line.is_empty() || offset + len == str.len() + 1) {
                     let group = &amp;str[offset..offset + len - 1];
                     offset += len;
                     len = 0;
