--- a/level/index.html
+++ b/level/index.html
@@ -212,7 +212,7 @@ Author: Thinking Rabbit
 <p>关卡可能通过行程编码压缩, 详情请参见<a href="run_length.html">行程编码</a>.</p>
 <h2 id="特殊关卡"><a class="header" href="#特殊关卡">特殊关卡</a></h2>
 <h3 id="玩家不可达区域存在箱子"><a class="header" href="#玩家不可达区域存在箱子">玩家不可达区域存在箱子</a></h3>
-<p><img src="../assets/sasquatch_41.png" alt="Sasquatch #41" /></p>
+<p><img src="../assets/sasquatch_41.png" alt="Sasquatch #41 by David W. Skinner" /></p>
 <pre><code class="language-txt">   #####
    #   #
  ###   ########
