--- a/resources.html
+++ b/resources.html
@@ -178,9 +178,10 @@
                     <main>
                         <h1 id="资源"><a class="header" href="#资源">资源</a></h1>
 <ul>
-<li><a href="http://sokobano.de/wiki/">http://sokobano.de/wiki/</a></li>
-<li><a href="https://www.sokoban-online.de/">https://www.sokoban-online.de/</a></li>
-<li><a href="https://sokoban.cn/">https://sokoban.cn/</a></li>
+<li><a href="http://sokobano.de/wiki/">http://sokobano.de/wiki/</a>: 德国推箱子 Wiki.</li>
+<li><a href="https://www.sokoban-online.de/">https://www.sokoban-online.de/</a>: 推箱子软件 JSoko.</li>
+<li><a href="https://sourceforge.net/projects/sokobanyasc/">https://sourceforge.net/projects/sokobanyasc/</a> 推箱子软件 SokobanYASC.</li>
+<li><a href="https://sokoban.cn/">https://sokoban.cn/</a>: 中国推箱子在线平台.</li>
 </ul>
 
                     </main>
