deploy: bb3df5ab89a71f89b980cc7156e192066e3e4c4d

--- a/print.html
+++ b/print.html
@@ -180,7 +180,7 @@
                         <h1 id="介绍"><a class="header" href="#介绍">介绍</a></h1>
 <p>本文将描述如何实现一个推箱子游戏 📦, 代码示例使用 Rust 语言 🦀 编写.</p>
 <h2 id="推箱子的起源"><a class="header" href="#推箱子的起源">推箱子的起源</a></h2>
-<p>推箱子在 1981 年由日本人今林宏行(いまばやし ひろゆき)所创造, 第一个版本于 1982 年 12 月发行, 名为<em>仓库番</em><sup class="footnote-reference"><a href="#1">1</a></sup>, 字面意思为 "仓库管理员". 截至 2024 年, 最新版本于 2019 年 8 月发行于  PlayStation 4 平台.</p>
+<p>推箱子在 1981 年由日本人今林宏行(いまばやし ひろゆき)所创造, 第一个版本于 1982 年 12 月发行, 名为<em>仓库番</em>, 字面意思为 "仓库管理员". 截至 2024 年, 最新版本于 2019 年 8 月发行于  PlayStation 4 平台.<sup class="footnote-reference"><a href="#1">1</a></sup></p>
 <p>英文名为: Sokoban 或 Soukoban.</p>
 <p>推荐视频: <a href="https://www.bilibili.com/video/BV1Ph41117YT%3E">【GM】火遍全球的推箱子，那些你所不知道的故事！· Bilibili</a>.</p>
 <h2 id="为什么通过案例来讲解"><a class="header" href="#为什么通过案例来讲解">为什么通过案例来讲解</a></h2>
@@ -192,12 +192,12 @@
 <h2 id="为什么选择推箱子作为案例"><a class="header" href="#为什么选择推箱子作为案例">为什么选择推箱子作为案例</a></h2>
 <p>之所以选择推箱子游戏, 是因为它具有以下特点:</p>
 <ul>
-<li>规则简单. 可以专注于实现功能, 而非理解复杂的游戏规则和机制.</li>
-<li>基本功能易于实现, 如推箱子和通关判断.</li>
-<li>有具有挑战的高级功能. 比如纯鼠标控制, 逆推等.</li>
-<li>有需要深入钻研的求解器, 用于自动求解推箱子关卡.</li>
+<li><strong>规则简单</strong>. 可以专注于实现功能, 而非理解复杂的游戏规则和机制.</li>
+<li><strong>基本功能易于实现</strong>, 如推箱子和通关判断.</li>
+<li><strong>有具有挑战的高级功能</strong>. 如纯鼠标控制, 逆推等.</li>
+<li><strong>有需要深入钻研的求解器</strong>, 用于自动求解推箱子关卡.</li>
 </ul>
-<p>推箱子的实现既可以简单也可以复杂，读者可以根据自身的情况选择学习的深度。</p>
+<p>推箱子的实现<strong>既可以简单也可以复杂</strong>，读者可以根据自身的情况选择学习的深度。</p>
 <h2 id="内容范围"><a class="header" href="#内容范围">内容范围</a></h2>
 <p>本文将描述基本功能的具体实现方法, 高级功能的实现方法以及求解器的实现思路.<br />
 但本文<strong>不涉及</strong>以下内容</p>
