deploy: dbd5457c1873ecc89f59c3a4f37f437bd2cdba52

--- a/index.html
+++ b/index.html
@@ -183,13 +183,14 @@
 <p><img src="assets/first_sokoban_15.png" alt="First Sokoban #15" /></p>
 <p>截至 2024 年, 最新版本推箱子(The Sokoban, みんなの倉庫番)于 2019 年 8 月发行于 PlayStation 4 平台.<sup class="footnote-reference"><a href="#1">1</a></sup></p>
 <p><img src="assets/the_sokoban.jpg" alt="The Sokoban" /></p>
-<p>可惜是最新版本的推箱在角色控制方面相较于其最初的版本并未见明显改进. 本文后续将介绍一种纯鼠标控制的角色控制方法.</p>
-<p>推荐视频: <a href="https://www.bilibili.com/video/BV1Ph41117YT%3E">【GM】火遍全球的推箱子，那些你所不知道的故事！· Bilibili</a>.</p>
+<p>可惜是最新版本的推箱在角色控制方面相较于其最初的版本并未见明显改进 😔. 本文后续将介绍一种纯鼠标控制的角色控制方法.</p>
+<p>推荐视频 🎥: <a href="https://www.bilibili.com/video/BV1Ph41117YT%3E">【GM】火遍全球的推箱子，那些你所不知道的故事！· Bilibili</a>.</p>
 <h2 id="为什么通过案例来讲解"><a class="header" href="#为什么通过案例来讲解">为什么通过案例来讲解</a></h2>
 <p>本文以 "推箱子" 游戏为案例, 深入浅出的描述软件开发过程. 通过案例讲解有以下目的:</p>
 <ul>
 <li>结合实例的学习可以将<strong>知识</strong>和<strong>应用</strong>结合在一起, 使读者无需被 "学这个有什么用?" 所困扰.</li>
 <li>提供丰富的实例. 推箱子问题本身还附带了许多子问题, 很适合作为例子使用.</li>
+<li>众多读者对游戏案例有浓厚的兴趣 🎮.</li>
 </ul>
 <h2 id="为什么选择推箱子作为案例"><a class="header" href="#为什么选择推箱子作为案例">为什么选择推箱子作为案例</a></h2>
 <p>之所以选择推箱子游戏, 是因为它具有以下特点:</p>
