--- a/introduction.html
+++ b/introduction.html
@@ -200,10 +200,10 @@
 <li><strong>有具有挑战的高级功能</strong>. 如纯鼠标控制, 逆推等.</li>
 <li><strong>有需要深入钻研的求解器</strong>, 用于自动求解推箱子关卡.</li>
 </ul>
-<p>推箱子的实现<strong>既可以简单也可以复杂</strong>，读者可以根据自身的情况选择学习的深度。</p>
+<p>推箱子的实现<strong>既可以简单也可以复杂</strong>, 读者可以根据自身的情况选择学习的深度.</p>
 <h2 id="内容范围"><a class="header" href="#内容范围">内容范围</a></h2>
 <p>本文将描述基本功能的具体实现方法, 高级功能的实现方法以及求解器的实现思路.<br />
-但本文<strong>不涉及</strong>以下内容</p>
+但本文<strong>不涉及</strong>以下内容:</p>
 <ul>
 <li>Rust 语言本身. 本文中出现的算法适用于其他编程语言, 不会专门介绍 Rust 语言的特性.</li>
 <li>游戏引擎.</li>
