--- a/introduction.html
+++ b/introduction.html
@@ -206,7 +206,7 @@
 但本文<strong>不涉及</strong>以下内容:</p>
 <ul>
 <li>Rust 语言本身. 本文中出现的算法适用于其他编程语言, 不会专门介绍 Rust 语言的特性.</li>
-<li>游戏引擎.</li>
+<li>游戏引擎. 本文中的推箱子实现并不依赖游戏引擎, 比如有的推箱子实现需要用到射线检测.</li>
 <li>推箱子的其他变种. 感兴趣的读者可以自行了解, 可以作为一种拓展.</li>
 </ul>
 <h2 id="项目代码"><a class="header" href="#项目代码">项目代码</a></h2>
