--- a/level/index.html
+++ b/level/index.html
@@ -216,7 +216,7 @@ Author: Thinking Rabbit
 本文将这种格式视为<strong>无效格式</strong>, 其可能是在批量替换 <code>_</code> 和 <code>-</code> 字符时意外产生的.</p>
 <p>关卡可能通过行程编码压缩, 详情请参见<a href="run_length.html">行程编码</a>.</p>
 <h2 id="其他格式"><a class="header" href="#其他格式">其他格式</a></h2>
-<p>中文论坛 "魔法吧" 使用 MF8 格式:</p>
+<p>中文论坛 "魔方吧" 使用 MF8 格式:</p>
 <pre><code class="language-txt">[soko=8,8]
 __HHH___
 __H.H___
