--- a/print.html
+++ b/print.html
@@ -207,7 +207,7 @@
 但本文<strong>不涉及</strong>以下内容:</p>
 <ul>
 <li>Rust 语言本身. 本文中出现的算法适用于其他编程语言, 不会专门介绍 Rust 语言的特性.</li>
-<li>游戏引擎.</li>
+<li>游戏引擎. 本文中的推箱子实现并不依赖游戏引擎, 比如有的推箱子实现需要用到射线检测.</li>
 <li>推箱子的其他变种. 感兴趣的读者可以自行了解, 可以作为一种拓展.</li>
 </ul>
 <h2 id="项目代码"><a class="header" href="#项目代码">项目代码</a></h2>
@@ -259,7 +259,7 @@ Author: Thinking Rabbit
 本文将这种格式视为<strong>无效格式</strong>, 其可能是在批量替换 <code>_</code> 和 <code>-</code> 字符时意外产生的.</p>
 <p>关卡可能通过行程编码压缩, 详情请参见<a href="level/run_length.html">行程编码</a>.</p>
 <h2 id="其他格式"><a class="header" href="#其他格式">其他格式</a></h2>
-<p>中文论坛 "魔法吧" 使用 MF8 格式:</p>
+<p>中文论坛 "魔方吧" 使用 MF8 格式:</p>
 <pre><code class="language-txt">[soko=8,8]
 __HHH___
 __H.H___
