deploy: ed1cc15c34c237598bc844372c14d312fdd230bc

--- a/level/index.html
+++ b/level/index.html
@@ -214,7 +214,7 @@ Author: Thinking Rabbit
 <p>!!! info
 多行注释还存在一种以 <code>comment:</code> 和 <code>comment_end:</code> 包裹的写法, 与之前提到的多行注释不同，这种多行注释使用下划线(<code>_</code>)来替代连字符(<code>-</code>)分割单词.<br />
 本文将这种格式视为<strong>无效格式</strong>, 其可能是在批量替换 <code>_</code> 和 <code>-</code> 字符时意外产生的.</p>
-<p>关卡可能通过行程编码压缩, 详情请参见<a href="run_length.html">行程编码</a>.</p>
+<p>关卡可能通过行程编码压缩, 请参见<a href="run_length.html">行程编码</a>.</p>
 <h2 id="其他格式"><a class="header" href="#其他格式">其他格式</a></h2>
 <p>中文论坛 "魔方吧" 使用 MF8 格式:</p>
 <pre><code class="language-txt">[soko=8,8]
