--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 <ul>
 <li>结合实例的学习可以将<strong>知识</strong>和<strong>应用</strong>结合在一起, 使读者无需被 "学这个有什么用?" 所困扰.</li>
 <li>提供丰富的实例. 推箱子问题本身还附带了许多子问题, 很适合作为例子使用.</li>
-<li>众多读者对游戏案例有浓厚的兴趣 🎮.</li>
+<li>众多读者对游戏有浓厚的兴趣 🎮.</li>
 </ul>
 <h2 id="为什么选择推箱子作为案例"><a class="header" href="#为什么选择推箱子作为案例">为什么选择推箱子作为案例</a></h2>
 <p>之所以选择推箱子游戏, 是因为它具有以下特点:</p>
