--- a/print.html
+++ b/print.html
@@ -191,7 +191,7 @@
 <ul>
 <li>结合实例的学习可以将<strong>知识</strong>和<strong>应用</strong>结合在一起, 使读者无需被 "学这个有什么用?" 所困扰.</li>
 <li>提供丰富的实例. 推箱子问题本身还附带了许多子问题, 很适合作为例子使用.</li>
-<li>众多读者对游戏案例有浓厚的兴趣 🎮.</li>
+<li>众多读者对游戏有浓厚的兴趣 🎮.</li>
 </ul>
 <h2 id="为什么选择推箱子作为案例"><a class="header" href="#为什么选择推箱子作为案例">为什么选择推箱子作为案例</a></h2>
 <p>之所以选择推箱子游戏, 是因为它具有以下特点:</p>
@@ -257,7 +257,7 @@ Author: Thinking Rabbit
 <p>!!! info
 多行注释还存在一种以 <code>comment:</code> 和 <code>comment_end:</code> 包裹的写法, 与之前提到的多行注释不同，这种多行注释使用下划线(<code>_</code>)来替代连字符(<code>-</code>)分割单词.<br />
 本文将这种格式视为<strong>无效格式</strong>, 其可能是在批量替换 <code>_</code> 和 <code>-</code> 字符时意外产生的.</p>
-<p>关卡可能通过行程编码压缩, 详情请参见<a href="level/run_length.html">行程编码</a>.</p>
+<p>关卡可能通过行程编码压缩, 请参见<a href="level/run_length.html">行程编码</a>.</p>
 <h2 id="其他格式"><a class="header" href="#其他格式">其他格式</a></h2>
 <p>中文论坛 "魔方吧" 使用 MF8 格式:</p>
 <pre><code class="language-txt">[soko=8,8]
