--- a/solver/index.html
+++ b/solver/index.html
@@ -217,6 +217,9 @@
 <p>通过启发式算法优先探索最接近最终状态的节点.</p>
 <p>TODO</p>
 <hr />
+<h2 id="割点"><a class="header" href="#割点">割点</a></h2>
+<p>通过割点可以在常量时间内判断两点是否是连通的.</p>
+<hr />
 <h2 id="优化器optimizer"><a class="header" href="#优化器optimizer">优化器(Optimizer)</a></h2>
 <p>对已知的路径进行<a href="https://en.wikipedia.org/wiki/Local_search_(optimization)">局部搜索(local search)</a>, 以寻找更佳的路径.</p>
 <p>TODO: 速度优先的求解策略 + 优化器优化 = 快速得到一个不那么差的解决方案.</p>
